--- a/index.html
+++ b/index.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
-<head>
-  <title>Lab 2</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
-</head>
-<body>
-
-<form>
-
-<div>
-
-<label for="name">Full Name (E.g. John Smith)</label>
-<input type="text" id="name">
-
-<label for="email">Email Address</label>
-<input type="text" id="email">
-
-<label for="phone">Phone Number</label>
-<input type="text" id="phone">
-
-
-<label for="dob">Date of Birth</label>
-<input type="text" id="dob">
-
-<input type="submit">
-
-</form>
-
-
-</body>
+   <head>
+      <title>Lab 2</title>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+      <link rel="stylesheet" media="screen" href="css/reset.css" />
+      <link rel="stylesheet" media="screen" href="css/screen.css" />
+   </head>
+   <body>
+      <form id="form">
+         <div>
+         <label for="name">Full Name (E.g. John Smith)</label>
+         <input type="text" id="name">
+         <label for="email">Email Address</label>
+         <input type="text" id="email">
+         <label for="phone">Phone Number</label>
+         <input type="text" id="phone">
+         <label for="dob">Date of Birth</label>
+         <input type="text" id="dob">
+         <input type="submit">
+		 <input type="reset" value="Reset">
+		 </div>
+      </form>
+   </body>
 </html>
