--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" media="screen" href="css/screen.css" />
    </head>
    <body>
+	<h2> Web Development Form </h2>
       <form id="form">
          <div>
          <label for="name">Full Name (E.g. John Smith)</label>
