added radio buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
          <input type="text" id="phone">
          <label for="dob">Date of Birth</label>
          <input type="text" id="dob">
+		 <h4> Do you know JavaScript?</h4>
+		 <label for="Yes">Yes</label>
+		 <input type="radio" id="Yes">
+		 <label for="No">No</label>
+		 <input type="radio" id="No">
          <input type="submit">
 		 <input type="reset" value="Reset">
 		 </div>
